fixes contrast issues and aria issues

--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,10 @@ a:visited {
   color: #ffffff;
 }
 
+a:active {
+  color: #ffffff;
+}
+
 .main-nav a:hover {
   border-bottom: 2px solid #FFFFFF;
 }
